将service类抽出接口